--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --repo git@github.com:proDev-Theron/dip-plantidentifier.git"
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
