--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,8 @@ jobs:
 
     - name: Configure Git
       run: |
-        git config --global user.email "test@theron.com"
-        git config --global user.name "Theron"
+        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
 
     - name: Build and deploy project
       if: github.ref == 'refs/heads/main'
