--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,11 +26,8 @@ jobs:
     - name: Install missing seedrandom package
       run: npm install seedrandom
 
-    - name: Configure Git
-      run: |
-        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
-        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-
     - name: Build and deploy project
       if: github.ref == 'refs/heads/main'
-      run: npm run deploy
+      run: |
+        export NODE_AUTH_TOKEN="${{ secrets.GH_TOKEN }}"
+        npm run deploy
