--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,19 +20,32 @@ jobs:
         node-version: 14
         cache: 'npm'
 
-    - name: Install dependencies
-      run: npm install
+    - name: Update lockfileVersion
+      run: npm install --package-lock
 
-    - name: Install missing seedrandom package
-      run: npm install seedrandom
+    - name: Upgrade node-pre-gyp
+      run: npm install --save @mapbox/node-pre-gyp
+
+    - name: Install dependencies
+      run: |
+        npm install
+        npm install seedrandom
+
+    - name: Set Git credentials
+      run: |
+        git config --global credential.username "${{ secrets.GIT_USER_NAME }}"
 
     - name: Configure Git
       run: |
         git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
         git config --global user.name "${{ secrets.GIT_USER_NAME }}"
 
+    - name: Set the NODE_AUTH_TOKEN
+      run: |
+        export NODE_AUTH_TOKEN="${{ secrets.GH_TOKEN }}"
+
     - name: Build and deploy project
       if: github.ref == 'refs/heads/main'
       run: |
-        export NODE_AUTH_TOKEN="${{ secrets.GH_TOKEN }}"
-        npm run deploy
+        npm run build
+        gh-pages -d build
