--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,8 @@ jobs:
       run: |
         git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
         git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+        git config --global credential.helper store
+
 
     - name: Set the NODE_AUTH_TOKEN
       run: |
