--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,12 +32,14 @@ jobs:
         npm install seedrandom
         npm install gh-pages
 
+    - name: Setup credentials to access private repositories
+      run: git config --global url.https://${{ secrets.GH_TOKEN }}@github.com/.insteadOf https://github.com/
+
     - name: Configure Git
       run: |
         git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
         git config --global user.name "${{ secrets.GIT_USER_NAME }}"
         git config --global credential.helper store
-
 
     - name: Set the NODE_AUTH_TOKEN
       run: |
